# rms

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  httpd.conf  index.php  manifest.xml  package.xml  stack.xml
app/: index.php
app/Config/: .database.php.swp  bootstrap.php  core.php  email.php  routes.php
app/Console/: cake.php
app/Controller/: AnalyticsController.php  AnonymousUserController.php  AppController.php  AppointmentsController.php  ArticlesController.php  BasicInterfaceController.php  ConditionsController.php  ContentController.php  CrowdManipulationInterfaceController.php  EmailsController.php  EnvironmentsController.php  ExperimentController.php  GlobalController.php  GraspDemonstrationInterfaceController.php  IfacesController.php  ImsController.php  InterfaceController.php  LogsController.php  MarkersController.php  MjpegsController.php  PagesController.php  QueueChatInterfaceController.php  ResourcesController.php  RmsController.php  RosController.php  RosbridgesController.php  SettingsController.php  SlotsController.php  StorageController.php  StreamsController.php  StudiesController.php  SubscriptionsController.php  TeleopsController.php  TfsController.php  TrainsInterfaceController.php  UrdfsController.php  UsersController.php  (+1 more)
install/: install.bash  install.sh  rms.conf  rms.sql  rms.sql~  update.bash
src/: index.php
utils/: .csslintrc  .jshintrc  Gruntfile.js  README.md  build.xml  package.json
www/: account.php  admin.php  environment.php  index.php  login.php  main_menu.php  setup.php  study.php
(+514 files in other folders)
