<?xml version="1.0"?>
<package>
  <name>rms</name>
  <version>0.2.0</version>
  <description>RMS (Robot Management System) is a remote lab management tool designed for use with controlling ROS enabled robots from the web.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rms</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rms/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rms</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
